# v1/controllers/users/2fa/send-2fa.js
@@ -1,5 +1,6 @@
 const userModel = require('../../../models/user-model');
-const { generate2FACode } = require('../../businessLogic/2fa');
+const doubleFactorModel = require('../../../models/user-2fa-model');
+const { generate2FACode, saveUser2Fa, updateUser2Fa } = require('../../businessLogic/2fa');
 const sendMail = require('../../businessLogic/emails/send');
 const sendSms = require('../../businessLogic/sms/send');
 
@@ -14,14 +15,31 @@ async function send2fa(uuid)
             //send with email
             const subject = "Your verification Code !";
             const content = `Your verification code : ${doubleFactor_code}`;
-            // sendMail(user,subject,content);
+            sendMail(user,subject,content);
         }
 
         if(user.phone)
         {
             const phone = "2250701959933";
             const content = `Your verification code : ${doubleFactor_code}`;
-            await sendSms(phone,content);
+            //await sendSms(phone,content);
+        }
+
+        const user2fa = await doubleFactorModel.findOne({userId: uuid});
+        const doubleFactorObject = {
+            doubleFactorCode: doubleFactor_code,
+            dateExpired: new Date(),
+            userId: uuid,
+            createdAt: new Date()
+        }
+        if(!user2fa)
+        {
+            await saveUser2Fa(doubleFactorObject);
+        }
+        else
+        {
+            console.log(doubleFactorObject)
+            await updateUser2Fa(doubleFactorObject);
         }
     }
 }
